<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistrateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regLblTitulo"
            android:gravity="center_horizontal"
            android:textSize="25sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp">
            <EditText
                android:id="@+id/regTxtDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtDni"
                android:maxLength="8"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp">
            <EditText
                android:id="@+id/regTxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtNombre"
                android:maxLength="100"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp">
            <EditText
                android:id="@+id/regTxtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtApellido"
                android:maxLength="100"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp">
            <EditText
                android:id="@+id/regTxtFechanac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtFechaNac"
                android:clickable="false"
                android:focusable="false"
                android:maxLength="10"
                android:inputType="date"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp">
            <EditText
                android:id="@+id/regTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtCorreo"
                android:maxLength="100"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
            android:id="@+id/regRgpSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/regRbtSinDefinir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/regRbtSinDefinir"/>
            <RadioButton
                android:id="@+id/regRbtFemenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regRbtFemenino"/>
            <RadioButton
                android:id="@+id/regRbtMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regRbtMasculino"/>

        </RadioGroup>
        <Spinner
            android:id="@+id/regCboDistritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:paddingVertical="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/regTxtContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtContraseña"
                android:maxLength="100"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/regTxtContraseña2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/regTxtContraseña2"
            android:maxLength="100"
            android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/regChkTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"

            android:text="@string/regTxtTerminos"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/regBtnCrear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/regTxtBtnCrear"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/regBtnRegresar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/regTxtBtnRegresar"
                android:textAllCaps="false"/>
        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>