<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.EditarPerfilActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        android:background="@color/backgroundColor">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editPerLblEditarPerfil"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:shadowColor="@android:color/black"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            >
            <EditText
                android:id="@+id/editPerTxtDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editPerTxtDni"
                android:maxLength="8"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary">
            <EditText
                android:id="@+id/editPerTxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editPerTxtNombre"
                android:maxLength="100"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary">
            <EditText
                android:id="@+id/editPerTxtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editPerTxtApellido"
                android:maxLength="100"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary">
            <EditText
                android:id="@+id/editPerTxtFechanac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editPerTxtFechaNac"
                android:clickable="false"
                android:focusable="false"
                android:maxLength="10"
                android:inputType="date"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary">
            <EditText
                android:id="@+id/editPerTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editPerTxtCorreo"
                android:maxLength="100"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
            android:id="@+id/editPerRgpSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/editPerRbtSinDefinir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/editPerRbtSinDefinir"
                android:buttonTint="@color/radiobt"/>
            <RadioButton
                android:id="@+id/editPerRbtFemenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/editPerRbtFemenino"
                android:buttonTint="@color/radiobt"/>
            <RadioButton
                android:id="@+id/editPerRbtMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/editPerRbtMasculino"
                android:buttonTint="@color/radiobt"/>

        </RadioGroup>
        <Spinner
            android:id="@+id/editPerCboDistritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:paddingVertical="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary">
            <EditText
                android:id="@+id/editPerTxtContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editPerTxtContraseña"
                android:maxLength="100"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary">
            <EditText
                android:id="@+id/editPerTxtContraseña2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editPerTxtContraseña2"
                android:maxLength="100"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/editPerBtnCrear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/editPerTxtBtnEditar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:padding="12dp"/>

            <Button
                android:id="@+id/editPerBtnRegresar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/editPerTxtBtnRegresar"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>