<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="45dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_trans"
            android:layout_marginTop="35dp"
            >
        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginVertical="15dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logTxtEmail"
                android:hint="@string/logTxtCorreo"
                android:inputType="textEmailAddress"
                android:background="@color/inputColor"
                >
            </EditText>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logTxtPassword"
                android:hint="@string/logTxtContraseña"
                android:inputType="textPassword"
                android:background="@color/inputColor"
                >
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LogBtnIngresar"
                android:text="@string/logBtnIngresar"
                android:paddingVertical="12dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                >
            </Button>

        </LinearLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logChkRecordar"
            android:text="@string/logChkRecordar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logLblOlvidaste"
            android:text="@string/logLblOlvidaste"
            android:gravity="center"
            android:textColor="@color/lblOlvidaste">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:text="@string/logLblCopyRight"
            >

        </TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>